Modifiche su tutto quanto l'esercizio

--- a/index.html
+++ b/index.html
@@ -3,32 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
-    <title>JS-BIGLIETTO-TRENO-FORM</title>
+    <title>Biglietto treno</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <main>
-        <h1>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
-
-        <div class="container uno">
-
-            <form action="#">
-
-            <input type="text" class="mioInput" placeholder="Inserisci Nome e Cognome">
     
-            <div class="invio"> Genera</div>
-            </form>
-        </div>
+    <form action="#">
+        <input type="text" class="myinput" placeholder="inserisci Nome e Cognome">
+        <input type="text" class="distanzadapercorrere" placeholder="km da percorrere">
+        <input type="text" class="età" placeholder="quanti anni hai?">
+    <div class="invio">
+        Genera
+    </div>
+    </form>
 
-        <h2>IL TUO BIGLIETTO</h2>
-        
-        <div class="container due">
+    <h2 id="mio_id"></h2>
 
-        </div>
-
-        <h2 id="mio_id">testo</h2>
-    <script type="text/javascript" src="JS/main.js">
-    </script> 
-    </main>
+<script type="text/javascript" src="js/main.js"></script>  
 </body>
 </html>
